fix: overflow in community partners

--- a/src/components/community-partners/community-partners.css
+++ b/src/components/community-partners/community-partners.css
@@ -42,7 +42,7 @@
     font-size: larger;
     color: white;
     position: absolute;
-    width: 100vw;
+    width: 100%;
     height: 50vh;
     top: -32.5vh;
     backdrop-filter: blur(3px);
